--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
           </div>
           <br>
           <h5>Professional Work</h5>
-          <div class="pro-work"><p>As a full-stack developer for dynamicWeb North America, my projects and tasks can very from day to day.  Our client's want a specific experience to take place on their site in the form of a custom header, animations, custom carousel, etc.  I create those items from their photoshop renderings or ideas.  Nearly anything is possible.</p>
-            <p>I am happy to show examples of prior client customizations during an in-person discussion for your business's website. For privacy purposes, I won't share dynamicWeb client information on this portfolio; nor will be able to allow any personal clients to take priority over my dynamicWeb obligations.  However, this affords me the opportunity to help small businesses by creating web solutions at a fraction of the cost of the bigger boutique shops locally.</p></div>
+          <div class="pro-work"><p>As a full-stack developer for dynamicWeb North America, my projects and tasks can very from day to day.  Our client's want a specific experience to take place on their site to include custom graphics, animations, API integrations, product catalog layouts and displays, custom customer portal centers, etc.  Nearly anything is possible.</p>
+            <p>To see a partial list of the projects DynamicWeb is working on, please visit <a href="https://www.dynamicweb.com/customers">DynamicWeb/Customers</a></p></div>
         </div>
       </div>
     </div>
