--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <br>
           <h5>Professional Work</h5>
           <div class="pro-work"><p>As a full-stack developer for dynamicWeb North America, my projects and tasks can very from day to day.  Our client's want a specific experience to take place on their site to include custom graphics, animations, API integrations, product catalog layouts and displays, custom customer portal centers, etc.  Nearly anything is possible.</p>
-            <p>To see a partial list of the projects DynamicWeb is working on, please visit <a href="https://www.dynamicweb.com/customers">DynamicWeb/Customers</a></p></div>
+            <p>To see a partial list of the projects DynamicWeb is working on, please visit <a href="https://www.dynamicweb.com/customers">DynamicWeb/Customers</a>.</p></div>
         </div>
       </div>
     </div>
